--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@ img{
 body{
 color:#171427
 }
+.container{
+    max-width: 1068px ;
+    margin: auto;
+    width: 100%;
+}
+section{
+    padding: 4rem 0 3rem;
+}
 header{
     position: fixed;
     top: 0;
@@ -30,5 +38,62 @@ header{
 .nav{
     display: flex;
     align-items: center;
-    justify-content: ;
+    justify-content: space-between ;
+    padding: 20px;
+}
+.logo{
+     font-size: 1.1rem;
+     color: #171427;
+     font-weight: 400;
+
+}
+#cart-icon{
+font-size: 1.8rem;
+cursor: pointer;
+}
+.section-title{
+    font-size: 1.5rem;
+    font-weight: 600;
+    text-align:center ;
+    margin-bottom: 2rem; 
+}
+.shop{
+  margin-top: 2rem ;
+}
+.shop-content{
+    display: grid;
+    grid-template-columns:repeat(auto-fit,minmax(220px,auto)) ;
+    gap:1.5rem;
+}
+.product-box{
+    position: relative;
+}
+.product-box:hover{
+    padding : 10px;
+    border:1px solid var(--text-color);
+    transition : 0.4s;
+}
+.product-img{
+    width: 100%;
+    height: auto;
+    margin-bottom: 0.5rem;
+
+}
+.product-title{
+    font-size: 2.1rem;
+    font-weight: 600;
+    margin-bottom: 0.5rem;
+}
+.price{
+    font-weight: 500 ;
+}
+.add-cart{
+    position :absolute ;
+    bottom: 0;
+    right: 0;
+    background: var(--text-color);
+    color: var(--bg-color);
+    padding:10px    ;
+    cursor: pointer;
+    
 }
