--- a/style.css
+++ b/style.css
@@ -34,6 +34,7 @@ header{
     width: 100%;
     background-color:#fff ;
     box-shadow: 0 1px 4px hsl(0 4% 15% / 10% );
+    z-index: 100;
 }
 .nav{
     display: flex;
@@ -50,6 +51,97 @@ header{
 #cart-icon{
 font-size: 1.8rem;
 cursor: pointer;
+}
+.cart{
+    position: fixed;
+    top : 0;
+    right: 0;
+    width: 360px;
+    min-height: 100vh;
+    padding: 20px;
+    background: var(--bg-color);
+    box-shadow: -2px 0 4px hsl(0 4% 15% / 10% ) ;
+
+
+}
+.cart-title{
+    text-align: center;
+    font-size: 1.5rem;
+    font-weight: 600;
+    margin-top: 2rem;
+}
+.cart-box{
+    display: grid;
+    grid-template-columns: 32% 50% 18%;
+    align-items: center;
+    gap:1rem;
+    margin-top: 1rem ;
+}
+.cart-img{
+    width: 100px;
+    height: 100px;
+    object-fit: contain;
+    padding : 10px
+}
+.detail-box{
+    display: grid;
+    row-gap: 0.5rem;
+
+}
+.cart-product-title{
+    font-size: 1.5rem;
+    text-transform: uppercase;
+}
+.cart-price{
+    font-weight: 500;
+}
+.cart-quantity{
+    border: 1px solid var(--text-color);
+    outline-color: var(--main-color);
+    width: 2.4rem;
+    text-align: center;
+    font-size: 1rem;
+}
+.cart-remove{
+    font-size: 24px;
+    color: var(--main-color);
+    cursor: pointer;
+}
+.Total{
+    display: flex;
+    justify-content: flex-end;
+    margin-top: 1.5rem;
+    border-top: 1px solid var(--text-color);
+}
+.Total-title{
+    font-size: 1rem;
+    font-weight: 600;
+}
+.Total-price{
+    margin-left: 0.5rem;
+}
+.btn-buy{
+    display: flex;
+    margin: 1.5rem auto 0 auto;
+    padding: 12px 20px;
+    border: none;
+    background: var(--main-color);
+    color: var(--bg-color);
+    font-size: 1rem;
+    font-weight: 500 ;
+    cursor: pointer;
+}
+.btn-buy:hover{
+    background: var(--text-color);
+}
+#close-cart{
+    position:absolute;
+    top: 1rem;
+    right: 0.8rem ;
+    font-size: 2rem;
+    color: var(--text-color);
+    cursor: pointer;
+
 }
 .section-title{
     font-size: 1.5rem;
@@ -95,5 +187,8 @@ cursor: pointer;
     color: var(--bg-color);
     padding:10px    ;
     cursor: pointer;
-    
+
+}
+.add-cart:hover{
+    background: hsl(249,32%,17%);
 }
