--- a/style.css
+++ b/style.css
@@ -61,8 +61,9 @@ cursor: pointer;
     padding: 20px;
     background: var(--bg-color);
     box-shadow: -2px 0 4px hsl(0 4% 15% / 10% ) ;
-
-
+}
+.cart.active{
+    right: 0;
 }
 .cart-title{
     text-align: center;
@@ -191,4 +192,8 @@ cursor: pointer;
 }
 .add-cart:hover{
     background: hsl(249,32%,17%);
+}
+.footer{
+    text-align: center;
+    display: flex;
 }
